# BirdHouse

./: .env-dist  .flake8  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml
.github/workflows/: deploy.yml
docker/: Dockerfile  post_deploy.sh
src/: auth.py  get_application.py  main.py  pyproject.toml
src/api/routes/: alert.py  api.py  light.py  sighting.py
src/database/: database.py  test_database.py
src/messages/: telegram.py  test_telegram.py
src/models/: alert.py  light.py  sighting.py
src/repositories/: alert_switch_repository.py  light_repository.py  sighting_repository.py
src/services/: alert_switch_service.py  light_service.py  sighting_service.py
src/settings/: app.py  config.py  connection.py  logging.py  settings.py
src/tests/: test_alert.py  test_database.py  test_light.py  test_sighting.py  test_telegram.py
