[tool.poetry]
name = "birdhouse"
version = "0.1.0"
description = ""
authors = ["martinsenniors <martin.galdeano@senniors.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
pyserial = "3.5"
requests = "2.32.5"
SQLAlchemy = "1.4.54"
pytest = "7.4.4"
flake8 = "5.0.4"
ipdb = "0.13.13"
python-telegram-bot = "22.5"
fastapi = "0.86.0"
uvicorn = "0.19.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
