[tool.poetry]
name = "birdhouse"
version = "0.1.0"
description = ""
authors = ["martinsenniors <martin.galdeano@senniors.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
pyserial = "3.5"
requests = "2.32.5"
SQLAlchemy = "1.4.54"
pytest = "7.4.4"
flake8 = "5.0.4"
ipdb = "0.13.13"
python-telegram-bot = "22.5"
fastapi = "0.110.0"
uvicorn = "0.19.0"
psycopg2-binary = "2.9.11"
httpx = "0.27.2"
python-dotenv = "1.2.1"
anyio = '3.7.1'
pydantic-settings = '2.12.0'

[tool.poetry.group.dev.dependencies]
pylint = "3.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pylint.main]
source-roots = ["src"]

[tool.pylint]
max-line-length = 120
disable = ["C0114", "W0718", "R0801", "R0902", "R0903", "C0115", "E1101", "C0116", "C0103", "W0612"]
